--- a/Self-Assessment.html
+++ b/Self-Assessment.html
@@ -1,7 +1,7 @@
  <html>
  <body>
                 <h1>My Professional Self-Assessment<h1>
-<p>It has been a little over two years since beginning my path towards a Bachelor’s in Computer Science. Prior to enrolling for this degree, I worked in customer service-oriented fields such as marketing and restaurants. Although I am currently still employed in a marketing firm, my goal is to contribute to a more intellectually demanding field.</p>
+<small><p>It has been a little over two years since beginning my path towards a Bachelor’s in Computer Science. Prior to enrolling for this degree, I worked in customer service-oriented fields such as marketing and restaurants. Although I am currently still employed in a marketing firm, my goal is to contribute to a more intellectually demanding field.</p>
 <p>The Computer Science industry caught my attention and pulled me in because of its relevance and influence on modern life, the wholistic knowledge base necessary to succeed, and the continuous advancements in knowledge and efficiency. Following this introduction is a group of three smaller projects that I had the opportunity to work on in previous courses.</p> 
 <p>The projects include:</p> 
 <p>1. a simple 3D model using Phong lighting, designed using OpenGL</p>
@@ -15,5 +15,5 @@ education and current ability that are not present.</p>
 <p>Three key points that should be stated outside of these projects include my willingness to learn and adapt when faced with new ideas, 
 my ability to work in a group or as an individual, and my ability to communicate information efficiently through different mediums. These 
 three points are highly useful, transferable skills that will help propel my understanding and abilities when faced with difficulties.</p>
-</body>
+</small></body>
 </html>
