--- a/Self-Assessment.html
+++ b/Self-Assessment.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>Self-Assessment<h1>
-<small>
+<font size="1">
 <p>
 It has been a little over two years since beginning my path towards a Bachelor’s in Computer Science. Prior to enrolling for this degree, I worked in customer service-oriented fields such as marketing and restaurants. Although I am currently still employed in a marketing firm, my goal is to contribute to a more intellectually demanding field. The Computer Science industry caught my attention and pulled me in because of its relevance and influence on modern life, the wholistic knowledge base necessary to succeed, and the continuous advancements in knowledge and efficiency. 
 </p>
@@ -19,6 +19,6 @@ Through the different artifacts, you will be able to get an idea of my current t
 <p>
 Three key points that should be stated outside of these projects include my willingness to learn and adapt when faced with new ideas, my ability to work in a group or as an individual, and my ability to communicate information efficiently through different mediums. These three points are highly useful, transferable skills that will help propel my understanding and abilities when faced with difficulties. 
 </p>
-</small>
+</font>
 </body>
 </html>
